# BeneOverlay

./: .gitignore  BeneOverlay.pro  CMakeLists.txt  CNAME  Dockerfile  README.md  data_resources.qrc  gulpfile.js  index.html  legal.html  package.json
.github/workflows/: build-app.yml  build-docker-image.yml  ccpp.yml
css/: new-age.css  new-age.min.css
fsuipc/: .gitignore  FSUIPC_User.h  FSUIPC_User.lib
html/: altitude.html  callsign.html  heading.html  landing.html  network.html  performance.html  progress.html  speed.html  temperature.html  widgets.html  wind.html
html/css/: beneoverlay.css
html/js/: altitude.js  beneoverlay.js  callsign.js  heading.js  landing.js  network.js  performance.js  progress.js  qwebchannel.js  speed.js  temperature.js  wind.js
html/js/landing/: attitude.js  landing.js  rate.js  speed.js  title.js
html/js/progress/: progress.js
html/js/widgets/: altitude.js  callsign.js  heading.js  network.js  performance.js  speed.js  temperature.js  widgets.js  wind.js
img/: .directory
include/: dataref.h  datarefmanager.h  flightsimconnector.h  updatemanager.h  version.h  websocketclientwrapper.h  websockettransport.h
js/: new-age.min.js
less/: new-age.less  variables.less
media/: logo.xcf
qml/: BOColorSelector.qml  BOErrorDialog.qml  BOFontSelector.qml  BOGroupBox.qml  BOImageSelector.qml  BOItem.qml  BOLanding.qml  BOMenuItem.qml  BOProgress.qml  BOSpinBox.qml  BOSwitch.qml  BOTextField.qml  BOWidget.qml  BOWidgetAltitude.qml  BOWidgetCallsign.qml  BOWidgetHeading.qml  BOWidgetNetwork.qml  BOWidgetPerformance.qml  BOWidgetSettings.qml  BOWidgetSpeed.qml  BOWidgetTemperature.qml  BOWidgetWind.qml  main.qml  main2.qml  qml_resources.qrc  qtquickcontrols2.conf
src/: dataref.cpp  datarefmanager.cpp  flightsimconnector.cpp  main.cpp  updatemanager.cpp  websocketclientwrapper.cpp  websockettransport.cpp
